shell-recorder: Timestamp buffers from the pipeline clock, not the wall clock

This should give more accurate timestamps on the video buffers, and especially
keep A/V sync when audio is also recorded.

https://bugzilla.gnome.org/show_bug.cgi?id=744642